--- a/html/common/headerfooter.html
+++ b/html/common/headerfooter.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="../css/headerstyle.css">
+<link rel="stylesheet" href="../../resources/css/common/headerstyle.css">
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <title>headernfooter</title>
 </head>
@@ -21,13 +21,13 @@
         </div>
 
         <div class="logo">
-            <img src="../resources/icons/logo2.png" alt="로고">
+            <img src="../../resources/icon/logo2.png" alt="로고">
         </div>
         <div class="menu">
-            <div class="menu-item"><img src ="../resources/icons/likebutton.svg" alt="" width="35px" height="35px"></div>
-            <div class="menu-item"><img src ="../resources/icons/alarmbutton.svg" alt=""width="37px" height="35.36px"></div>
-            <div class="menu-item"><img src ="../resources/icons/uploadbutton.svg" alt=""width="118px" height="35.36px"></div>
-            <div class="menu-item"><img src="../resources/icons/loginbutton.svg"alt=""width="118px" height="35.36px"></div>
+            <div class="menu-item"><img src ="../../resources/icon/likebutton.svg" alt="" width="35px" height="35px"></div>
+            <div class="menu-item"><img src ="../../resources/icon/alarmbutton.svg" alt=""width="37px" height="35.36px"></div>
+            <div class="menu-item"><img src ="../../resources/icon/uploadbutton.svg" alt=""width="118px" height="35.36px"></div>
+            <div class="menu-item"><img src="../../resources/icon/loginbutton.svg"alt=""width="118px" height="35.36px"></div>
         </div>               
             <div id="search-area">
                 <form id="search-form">
@@ -36,7 +36,7 @@
                         onfocus="this.placeholder=''" onblur="this.placeholder='  검색어를 입력해주세요.'" >
                     </div>
                     <div id="search-btn-area">
-                        <button type="submit" id="search-btn" ><img src="../resources/icons/searchbutton.png"></button>
+                        <button type="submit" id="search-btn" ><img src="../../resources/icon/searchbutton.png"></button>
                     </div>
                 </form>
             </div></div></div>
